# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  device_auth_session_v1_enabled = true
  device_auth_account_enabled = false
  device_auth_pseudonym_enabled = false
  device_auth_p2p_lite_protocol_enabled = true
  device_auth_p2p_standard_protocol_enabled = false
  device_auth_p2p_lite_protocol_legacy_enabled = true
  device_auth_account_lite_protocol_enabled = false
}
