#
# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")

group("hichainsdk") {
  deps = []
#  if (os_level == "mini" || os_level == "small") {
    deps += [ "//base/security/device_auth/frameworks/deviceauth_lite/source:hichainsdk" ]
#  }
}

group("deviceauth_lite_test_build") {
  testonly = true
  deps = []
  if (os_level == "standard") {
    deps += [ "//base/security/device_auth/frameworks/deviceauth_lite/unittest:DeviceAuthTest" ]
  }
}

group("fuzztest") {
  testonly = true
  deps = []
  if (os_level == "standard") {
    deps += [ 
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/getinstance_fuzzer:fuzztest",
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/authenticatepeer_fuzzer:fuzztest",
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/dellocalauthinfo_fuzzer:fuzztest",
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/destroy_fuzzer:fuzztest",
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/listtrustpeer_fuzzer:fuzztest",
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/receivedata_fuzzer:fuzztest",
        "//base/security/device_auth/frameworks/deviceauth_lite/fuzztest/startpake_fuzzer:fuzztest",
    ]
  }
}