# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/device_auth/deps_adapter/deviceauth_hals.gni")
import("//base/security/device_auth/services/deviceauth.gni")
import("//build/ohos.gni")

ohos_shared_library("deviceauth_napi") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  include_dirs = inc_path + hals_inc_path
  include_dirs += [ "include" ]

  version_script = "libdeviceauth_napi.map"
  defines = deviceauth_defines

  sources = [ "src/credmgr_napi.cpp" ]

  deps = [ "${deps_adapter_path}:${hal_module_name}" ]
  deps += [ "${deviceauth_path}/services:deviceauth_sdk" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/security"
  subsystem_name = "security"
  part_name = "device_auth"
}
